--- a/product-order-management/src/main/resources/application.properties
+++ b/product-order-management/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Product Order Management
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ProductM-DB
+spring.datasource.username=postgres
+spring.datasource.password=0000
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
